--- a/flat_finder_project/package.json
+++ b/flat_finder_project/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "firebase": "^10.11.0",
+    "framer-motion": "^11.1.7",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
