--- a/flat_finder_project/package.json
+++ b/flat_finder_project/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-toastify": "^4.1.0",
     "firebase": "^10.11.0",
     "framer-motion": "^11.1.7",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
     "uuid": "^9.0.1"
   },
